# terminal-eq-grapher

./: Cargo.toml
src/: action.rs  app.rs  focus.rs  graph.rs  lib.rs  main.rs  ui.rs
src/components/: domain.rs  expr.rs  focus.rs  graph.rs  help.rs  home.rs  input.rs  mod.rs  title.rs
