[package]
name = "terminal-eq-grapher"
version = "0.1.0"
edition = "2021"
description = "none"

authors = ["rhasler1 <rhasler@luc.edu>"]

[dependencies]
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
meval = "0.2.0"
ratatui = { version = "0.26.0", features = ["serde", "macros"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
directories = "5.0.1"
libc = "0.2.148"
